--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,38 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "BoardsDbContext": "Server=XD401462;Database=DI_Boards;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
+    //"BoardsDbContext": "Server=DESKTOP-ANJVLKR\\SQLEXPRESS;Database=DI_Boards;Trusted_Connection=True;Pooling=true;"
+
+
+  },
+  "Client": {
+    "ClientId": "dotars_boards",
+    "ClientName": "DOTARS Boards Application",
+    "ClientUri": "http://localhost:4200",
+    "RedirectUri": "login_complete",
+    "PostLogoutRedirectUri": "logout?postLogout=true"
+  },
+
+  "IdentityServer": {
+    "Clients": [
+      {
+       
+      
+        "PostLogoutRedirectUris": [ "http://localhost:4200/logout?postLogout=true" ],
+        "AllowedCorsOrigins": [ "http://localhost:4200" ],
+        "AllowedGrantTypes": [ "implicit" ],
+        "AllowedScopes": [ "openid", "profile", "boardsapi" ],
+        "AllowAccessTokensViaBrowser": true,
+        "RequireConsent": false,
+        "AccessTokenLifetime": 1800
+      }
+     
+    ]
+  },
+
+
+
   "AllowedHosts": "*"
 }
