--- a/appsettings.json
+++ b/appsettings.json
@@ -7,15 +7,20 @@
     }
   },
   "ConnectionStrings": {
-    "BoardsDbContext": "Server=XD401462;Database=DI_Boards;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
+    "BoardsDbContext": "Server=XD401462;Database=DI_Boards4;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
     //"BoardsDbContext": "Server=DESKTOP-ANJVLKR\\SQLEXPRESS;Database=DI_Boards;Trusted_Connection=True;Pooling=true;"
   },
   "Client": {
     "ClientId": "dotars_boards",
     "ClientName": "DOTARS Boards Application",
-    "ClientUri": "http://localhost:4200",
+    "ClientUri": "https://localhost:4200",
     "RedirectUri": "login_complete",
     "PostLogoutRedirectUri": "logout?postLogout=true"
+  },
+  "ADFS": {
+    "Authority": "https://10.0.0.136/adfs",
+    "ClientId": "cb03e822-5a48-4cf2-a471-3cb82388586e"
+
   },
   "AllowedHosts": "*"
 }
