--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "BoardsDbContext": "Server=XD401462;Database=DI_Boards4;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
+    "BoardsDbContext": "Server=XD401462;Database=DI_Boards5;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
     //"BoardsDbContext": "Server=DESKTOP-ANJVLKR\\SQLEXPRESS;Database=DI_Boards;Trusted_Connection=True;Pooling=true;"
   },
   "Client": {
@@ -18,9 +18,9 @@
     "PostLogoutRedirectUri": "logout?postLogout=true"
   },
   "ADFS": {
-    "Authority": "https://10.0.0.136/adfs",
-    "ClientId": "cb03e822-5a48-4cf2-a471-3cb82388586e"
-
+    "Authority": "https://win-j26ljf3imp4.DiDevZone.Net/adfs",
+    "ClientId": "https://akdev.io:5001/",
+    "Secret": "RjEkgbn_JC0Dm7-BmLPo_MZmbKmhn_8OxvQGpAk5"
   },
   "AllowedHosts": "*"
 }
