--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "BoardsDbContext": "Server=XD401462;Database=DI_Boards5;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
+    "BoardsDbContext": "Server=XD401462;Database=DI_Boards;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
     //"BoardsDbContext": "Server=DESKTOP-ANJVLKR\\SQLEXPRESS;Database=DI_Boards;Trusted_Connection=True;Pooling=true;"
   },
   "Client": {
@@ -19,7 +19,7 @@
   },
   "ADFS": {
     "Authority": "https://win-j26ljf3imp4.DiDevZone.Net/adfs",
-    "ClientId": "https://akdev.io:5001/",
+    "ClientId": "https://akdev.io:5010/",
     "Secret": "RjEkgbn_JC0Dm7-BmLPo_MZmbKmhn_8OxvQGpAk5"
   },
   "AllowedHosts": "*"
