--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,11 +1,22 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
-   
+    "iisExpress": {
+      "applicationUrl": "http://localhost:60019",
+      "sslPort": 44390
+    }
   },
   "profiles": {
-  
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
+      }
+    },
     "DI.TokenService": {
       "commandName": "Project",
       "launchBrowser": false,
