--- a/appsettings.json
+++ b/appsettings.json
@@ -8,14 +8,13 @@
   },
   "ConnectionStrings": {
     "BoardsDbContext": "Server=XD401462;Database=DI_Boards;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
-    //"BoardsDbContext": "Server=DESKTOP-ANJVLKR\\SQLEXPRESS;Database=DI_Boards;Trusted_Connection=True;Pooling=true;"
   },
   "Client": {
     "ClientId": "dotars_boards",
     "ClientName": "DOTARS Boards Application",
     "ClientUri": "https://localhost:4200",
     "RedirectUri": "login_complete",
-    "PostLogoutRedirectUri": "logout?postLogout=true"
+    "PostLogoutRedirectUri": "logout"
   },
   "ADFS": {
     "Authority": "https://win-j26ljf3imp4.DiDevZone.Net/adfs",
