--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "BoardsDbContext": "Server=XD401462;Database=DI_Boards;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
+    "BoardsDbContext": "Server=XD401462;Database=DI_Boards27Sep;Trusted_Connection=True;Pooling=true;trustServerCertificate=true;"
   },
   "Client": {
     "ClientId": "dotars_boards",
@@ -16,9 +16,13 @@
     "RedirectUri": "login_complete",
     "PostLogoutRedirectUri": "logout"
   },
-  "ADFS": {
+  "ADFS3": {
+    "Realm": "https://localhost:44390/",
+    "Authority": "https://10.0.0.131"
+  },
+  "ADFS4": {
     "Authority": "https://win-j26ljf3imp4.DiDevZone.Net/adfs",
-    "ClientId": "https://akdev.io:5010/",
+    "ClientId": "https://localhost:44390/",
     "Secret": "RjEkgbn_JC0Dm7-BmLPo_MZmbKmhn_8OxvQGpAk5"
   },
   "AllowedHosts": "*"
